@@ -17,25 +17,19 @@ package net.rptools.maptool.client.ui.addresource;
 import com.jidesoft.swing.FolderChooser;
 import io.sentry.Sentry;
 import java.awt.Dimension;
-import java.io.BufferedReader;
-import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.text.NumberFormat;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Set;
 import javax.swing.*;
 import net.rptools.lib.FileUtil;
 import net.rptools.maptool.client.AppSetup;
 import net.rptools.maptool.client.AppStatePersisted;
 import net.rptools.maptool.client.MapTool;
-import net.rptools.maptool.client.RemoteFileDownloader;
-import net.rptools.maptool.client.WebDownloader;
 import net.rptools.maptool.client.swing.AbeillePanel;
 import net.rptools.maptool.client.swing.ButtonKind;
 import net.rptools.maptool.client.swing.GenericDialog;
@@ -43,17 +37,13 @@ import net.rptools.maptool.client.swing.GenericDialogFactory;
 import net.rptools.maptool.client.ui.theme.Icons;
 import net.rptools.maptool.client.ui.theme.RessourceManager;
 import net.rptools.maptool.language.I18N;
+import net.rptools.maptool.util.library.Library;
+import net.rptools.maptool.util.library.LibraryUtils;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 
 public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
-  private static final Logger log = LogManager.getLogger(AddResourceDialog.class);
-
-  private static final String LIBRARY_URL = "http://library.rptools.net/1.3";
-  private static final String LIBRARY_LIST_URL = LIBRARY_URL + "/listArtPacks";
-
-  public enum Tab {
+  private enum Tab {
     LOCAL,
     WEB,
     RPTOOLS
@@ -81,12 +71,12 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
     dialogFactory.display();
   }
 
-  public JTextField getBrowseTextField() {
+  private JTextField getBrowseTextField() {
     return (JTextField) getComponent("@localDirectory");
   }
 
-  public JList getLibraryList() {
-    return (JList) getComponent("@rptoolsList");
+  private JList getLibraryList() {
+    return (JList) getComponent("rptoolsList");
   }
 
   @SuppressWarnings("unused")
@@ -150,20 +140,32 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
     // This pattern is safe because it is only called on the EDT
     downloadLibraryListInitiated = true;
 
-    try {
-      DownloadListWorker worker =
-          new DownloadListWorker(
-              getLibraryList(),
-              new WebDownloader(new URL(LIBRARY_LIST_URL)),
-              AppStatePersisted.getAssetRoots());
-      worker.execute();
-    } catch (MalformedURLException e) {
-      MapTool.showMessage(
-          "dialog.addresource.error.malformedurl",
-          "Error",
-          JOptionPane.ERROR_MESSAGE,
-          LIBRARY_LIST_URL);
-    }
+    var libraryList = getLibraryList();
+
+    LibraryUtils.downloadLibraryList()
+        .whenCompleteAsync(
+            (librariesString, t) -> {
+              if (t != null) {
+                libraryList.setModel(
+                    new MessageListModel(I18N.getText("dialog.addresource.errorDownloading")));
+              } else {
+                var libraries = LibraryUtils.parseLibraryList(librariesString);
+
+                // No need to show the user libraries they already have.
+                var assetRoots =
+                    AppStatePersisted.getAssetRoots().stream().map(File::getName).toList();
+
+                var listModel = new DefaultListModel<LibraryRow>();
+                libraries.stream()
+                    .filter(l -> !assetRoots.contains(l.name()))
+                    .sorted(Comparator.comparing(Library::name))
+                    .map(LibraryRow::new)
+                    .forEach(listModel::addElement);
+
+                libraryList.setModel(listModel);
+              }
+            },
+            SwingUtilities::invokeLater);
   }
 
   @Override
@@ -173,7 +175,7 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
     }
 
     // Add the resource
-    final List<LibraryRow> rowList = new ArrayList<>();
+    final List<Library> rowList = new ArrayList<>();
 
     var model = getModel();
     switch (model.getTab()) {
@@ -216,9 +218,10 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
           return false;
         }
         // validate the url format so that we don't hit it later
+        URL url;
         try {
-          new URL(model.getUrl());
-        } catch (MalformedURLException e) {
+          url = new URI(model.getUrl()).toURL();
+        } catch (URISyntaxException | MalformedURLException e) {
           MapTool.showMessage(
               "dialog.addresource.warn.invalidurl",
               "Error",
@@ -226,7 +229,7 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
               model.getUrl());
           return false;
         }
-        rowList.add(new LibraryRow(model.getUrlName(), model.getUrl(), -1));
+        rowList.add(new Library(model.getUrlName(), url, -1));
       }
 
       case RPTOOLS -> {
@@ -237,6 +240,7 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
               "dialog.addresource.warn.mustselectone", "Error", JOptionPane.ERROR_MESSAGE);
           return false;
         }
+
         for (Object obj : selectedRows) {
           // Somehow a String is being returned instead of a LibraryRow object
           // in some cases.  See issue #343 on GitHub.
@@ -247,43 +251,38 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
             // Move on to next one...
             continue;
           }
-          LibraryRow row = (LibraryRow) obj;
 
-          // validate the url format
-          row.path = LIBRARY_URL + "/" + row.path;
-          try {
-            new URL(row.path);
-          } catch (MalformedURLException e) {
-            MapTool.showMessage(
-                "dialog.addresource.warn.invalidurl", "Error", JOptionPane.ERROR_MESSAGE, row.path);
-            return false;
-          }
-          rowList.add(row);
+          LibraryRow row = (LibraryRow) obj;
+          rowList.add(row.library());
         }
       }
     }
 
-    new SwingWorker<Object, Object>() {
-      @Override
-      protected Object doInBackground() {
-        for (LibraryRow row : rowList) {
-          try {
-            RemoteFileDownloader downloader = new RemoteFileDownloader(new URL(row.path));
-            File tmpFile = downloader.read();
-            AppSetup.installLibrary(row.name, tmpFile.toURI().toURL());
-            tmpFile.delete();
-          } catch (IOException e) {
-            log.error("Error downloading library: {}", e, e);
-            MapTool.showInformation("dialog.addresource.warn.couldnotload");
-          }
-        }
-        return null;
-      }
-    }.execute();
+    LibraryUtils.downloadAndInstall(rowList)
+        .thenAcceptAsync(
+            downloadResult -> {
+              if (!downloadResult.failures().isEmpty()) {
+                MapTool.showError(
+                    formatLibraryInstallMessage(
+                        I18N.getText("dialog.addresource.error.couldNotInstallLibraries"),
+                        downloadResult.failures()));
+              }
+            },
+            SwingUtilities::invokeLater);
+
     return true;
   }
 
-  public static class Model {
+  private static String formatLibraryInstallMessage(String main, List<Library> libraries) {
+    var messageBuilder = new StringBuilder().append("<html><body>").append(main).append("<ul>");
+    for (var library : libraries) {
+      messageBuilder.append("<li>").append(library.name());
+    }
+    messageBuilder.append("</ul></body></html>");
+    return messageBuilder.toString();
+  }
+
+  protected static class Model {
     private String localDirectory;
     private String urlName;
     private String url;
@@ -323,39 +322,14 @@ public class AddResourceDialog extends AbeillePanel<AddResourceDialog.Model> {
   }
 }
 
-class LibraryRow {
-  final String name;
-  String path;
-  final int size;
-
-  LibraryRow(String name, String path, int size) {
-    this.name = name.trim();
-    this.path = path.trim();
-    this.size = size;
-  }
-
-  LibraryRow(String row) {
-    String[] data = row.split("\\|");
-
-    name = data[0].trim();
-    path = data[1].trim();
-    size = Integer.parseInt(data[2]);
-  }
-
+record LibraryRow(Library library) {
   @Override
   public String toString() {
-    return "<html><b>" + name + "</b> <i>(" + getSizeString() + ")</i>";
-  }
-
-  private String getSizeString() {
-    NumberFormat format = NumberFormat.getNumberInstance();
-    if (size < 1000) {
-      return format.format(size) + " bytes";
-    }
-    if (size < 1000000) {
-      return format.format(size / 1000) + " k";
-    }
-    return format.format(size / 1000000) + " mb";
+    return "<html><b>"
+        + library.name()
+        + "</b> <i>("
+        + FileUtils.byteCountToDisplaySize(library.size())
+        + ")</i>";
   }
 }
 
@@ -372,67 +346,5 @@ class MessageListModel extends AbstractListModel {
 
   public int getSize() {
     return 1;
-  }
-}
-
-class DownloadListWorker extends SwingWorker<Object, Object> {
-  private static final Logger log = LogManager.getLogger(DownloadListWorker.class);
-  private ListModel model;
-  private JList<LibraryRow> jList;
-  private WebDownloader downloader;
-  private Set<File> assetRoots;
-
-  DownloadListWorker(JList<LibraryRow> jList, WebDownloader downloader, Set<File> assetRoots) {
-    this.jList = jList;
-    this.downloader = downloader;
-    this.assetRoots = assetRoots;
-  }
-
-  @Override
-  protected Object doInBackground() throws Exception {
-    String result = null;
-    try {
-      result = downloader.read();
-    } finally {
-      if (result == null) {
-        model = new MessageListModel(I18N.getText("dialog.addresource.errorDownloading"));
-      }
-    }
-    DefaultListModel<LibraryRow> listModel = new DefaultListModel<>();
-
-    // Create a list to compare against for dups
-    List<String> libraryNameList = new ArrayList<>();
-    for (File file : assetRoots) {
-      libraryNameList.add(file.getName());
-    }
-
-    try {
-      BufferedReader reader =
-          new BufferedReader(new InputStreamReader(new ByteArrayInputStream(result.getBytes())));
-      List<LibraryRow> tempRows = new ArrayList<>();
-      String line;
-      while ((line = reader.readLine()) != null) {
-        LibraryRow row = new LibraryRow(line);
-
-        // Don't include if we've already got it
-        if (!libraryNameList.contains(row.name)) {
-          tempRows.add(row);
-        }
-      }
-      tempRows.sort(Comparator.comparing(o -> o.name));
-      for (LibraryRow row : tempRows) {
-        listModel.addElement(row);
-      }
-      model = listModel;
-    } catch (Throwable t) {
-      log.error("unable to parse library list", t);
-      model = new MessageListModel(I18N.getText("dialog.addresource.errorDownloading"));
-    }
-    return null;
-  }
-
-  @Override
-  protected void done() {
-    jList.setModel(model);
   }
 }
